--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,13 @@ div {
 	margin-left: 2px;
 	margin-top: 2px;
 	font-weight: bold;
+	text-align: center;
+}
+
+.clicked {
+	background: turquoise;
+}
+
+.unClicked {
+	background-color: coral;
 }
